test/functional/run/missing_argument_c_variadic.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

@no_mangling @c_variadic func printf(s: *Char, p: Int) -> Int;


// CHECK: error: Cannot convert (?) -> ? to ?
// CHECK: note: Available overload: @c_variadic (*Char, i32) -> i32
func main() -> Int {
    printf("We can now print an Int, check this out -> %d\n");
    return 0;
}
